index.html updated by shubham

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Hello, World!</h1>
   <p>Welcome to learning Git.</p>
   <p>yashbhaiyya</p>
+  <p>new update by yashbhaiyya</p>
   
 </body>
 </html>
